--- a/views/createArticle.ejs
+++ b/views/createArticle.ejs
@@ -1,6 +1,21 @@
 <%- include('layouts/header.ejs') %>
 <%- include('layouts/navigation.ejs') %>
+<script>
+    function arrayFunction() {
+        var checkboxes = document.getElementsByName("category");
+        console.log(checkboxes);
+        var checkboxesChecked = [];
 
+        for (var i = 0; i < checkboxes.length; i++) {
+
+            if (checkboxes[i].checked) {
+                checkboxesChecked.push(checkboxes[i].value);
+            }
+        }
+
+        console.log(checkboxesChecked);
+    }
+</script>
 <div class="container" style="height: 6em;"></div>
 <div id="calendar" class="page container article section-bg">
     <div class="section-title">
@@ -9,43 +24,46 @@
 
     <div class="row">
         <div class="col-8 offset-2">
-            <form action="/submitArticle" method="POST">
+            <form action="/submitArticle" method="POST" onclick="arrayFunction">
                 <div class="row">
                     <div class="col-12">
                         <div class="form-group">
                             <label for="titleInput"><b>Title</b></label>
-                            <input type='text' name='title' class="form-control" id="titleInput"
-                                placeholder="Title*" required>
+                            <input type='text' name='title' class="form-control" id="titleInput" placeholder="Title*"
+                                required>
                         </div>
                     </div>
-                </div>     
+                </div>
                 <div class="row">
                     <div class="col-12">
                         <div class="form-group">
                             <label for="contentInput"><b>Content</b></label>
-                            <textarea name="content" id="contentInput" cols="77" rows="10" placeholder=" Content*" required></textarea>
+                            <textarea name="content" id="contentInput" cols="77" rows="10" placeholder=" Content*"
+                                required></textarea>
                         </div>
                     </div>
                 </div>
 
                 <script>
                     tinymce.init({
-                      selector: 'textarea',
-                      plugins: 'a11ychecker advcode casechange formatpainter linkchecker autolink lists checklist media mediaembed pageembed permanentpen powerpaste table advtable tinycomments tinymcespellchecker',
-                      toolbar: 'a11ycheck addcomment showcomments casechange checklist code formatpainter pageembed permanentpen table',
-                      toolbar_mode: 'floating',
-                      tinycomments_mode: 'embedded',
-                      tinycomments_author: 'Author name'
+                        selector: 'textarea',
+                        plugins: 'a11ychecker advcode casechange formatpainter linkchecker autolink lists checklist media mediaembed pageembed permanentpen powerpaste table advtable tinycomments tinymcespellchecker',
+                        toolbar: 'a11ycheck addcomment showcomments casechange checklist code formatpainter pageembed permanentpen table',
+                        toolbar_mode: 'floating',
+                        tinycomments_mode: 'embedded',
+                        tinycomments_author: 'Author name'
                     });
                 </script>
 
                 <div class="row">
                     <div class="col-5 offset-1 border border-quaternary-color rounded">
                         <br>
-                        <label class="form-check-label text-quaternary-color" for="categories"><h6>Categories</h6></label>
+                        <label class="form-check-label text-quaternary-color" for="categories">
+                            <h6>Categories</h6>
+                        </label>
                         <hr>
                         <div class="form-group form-check" id="categories">
-                            <input type="checkbox" class="form-check-input" name="category[]" id="eventInput"  />
+                            <input type="checkbox" class="form-check-input" name="category[]" id="eventInput" />
                             <label class="form-check-label" for="eventInput">Event</label>
                         </div>
                         <div class="form-group form-check">
@@ -69,7 +87,8 @@
                             <label class="form-check-label" for="meetingInput">Meeting</label>
                         </div>
                         <div class="form-group form-check">
-                            <input type="checkbox" class="form-check-input" name="category[]" id="dataStructuresInput" />
+                            <input type="checkbox" class="form-check-input" name="category[]"
+                                id="dataStructuresInput" />
                             <label class="form-check-label" for="dataStructuresInput">Data Structures</label>
                         </div>
                         <div class="form-group form-check">
@@ -84,20 +103,24 @@
 
                     <div class="col-5 border border-quaternary-color rounded">
                         <br>
-                        <label class="form-check-label text-quaternary-color"><h6>Images</h6></label>
+                        <label class="form-check-label text-quaternary-color">
+                            <h6>Images</h6>
+                        </label>
                         <hr>
                         <div class="form-group">
                             <label for="mainImageInput">Main Image</label>
                             <input type='file' name='mainImage' class="form-control" id="mainImageInput" required>
                         </div>
                         <hr>
-                        <label class="form-check-label text-quaternary-color"><h6>Tags</h6></label>
+                        <label class="form-check-label text-quaternary-color">
+                            <h6>Tags</h6>
+                        </label>
                         <hr>
                         <div class="form-group">
-                            <label for="tagsInput">Include any tags that would relate to this article. 
+                            <label for="tagsInput">Include any tags that would relate to this article.
                                 At a minimum include the tags: #tamusaacm #tamusawicys</label>
-                            <input type='text' name='tags' class="form-control" id="tagsInput"
-                                placeholder="#Tags*" required>
+                            <input type='text' name='tags' class="form-control" id="tagsInput" placeholder="#Tags*"
+                                required>
                         </div>
                     </div>
                 </div>
@@ -109,7 +132,7 @@
                     <div class="col-4 text-center">
                         <button class="btn-learn-more" type="reset">Reset</button>
                     </div>
-                </div>       
+                </div>
             </form>
         </div>
     </div>
