--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -5,8 +5,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <h4>Join Our Newsletter</h4>
-                    <form action="" method="post">
-                        <input type="email" name="email"><input type="submit" value="Subscribe">
+                    <form action="/submitMailingList" method="POST">
+                        <input type="email" name="email" id="email"><input type="submit" value="Subscribe">
                     </form>
                 </div>
             </div>
