--- a/views/layouts/navigation.ejs
+++ b/views/layouts/navigation.ejs
@@ -3,7 +3,7 @@
         <i class="fa fa-bars fa-2x"></i>
     </div>
     <div class="logo animate fadeInUp">
-        <img src="/assets/img/tamusa_acm_logo.svg" alt="Logo">
+        <a href="/"><img src="/assets/img/tamusa_acm_logo.png" alt="Logo"></a>
     </div>
     <div class="menu">
         <ul class="nav-list">
