--- a/views/groups.ejs
+++ b/views/groups.ejs
@@ -7,7 +7,7 @@
     </div>
 
     <div class="row">
-        <div class="col-lg-6 mt-4 mt-lg-0 p-2">
+        <div class="card col-lg-6 p-1">
             <div class="member d-flex align-items-start">
                 <div class="pic"><img src="/assets/img/groups/hackathon.jpg" class="img-fluid" alt=""></div>
                 <div class="member-info">
@@ -22,7 +22,7 @@
             </div>
         </div>
 
-        <div class="col-lg-6 mt-4 mt-lg-0 p-2">
+        <div class="card col-lg-6 p-1">
             <div class="member d-flex align-items-start">
                 <div class="pic"><img src="/assets/img/groups/project-stamp.jpg" class="img-fluid" alt=""></div>
                 <div class="member-info">
@@ -37,7 +37,7 @@
             </div>
         </div>
 
-        <div class="col-lg-6 mt-4 mt-lg-0 p-2">
+        <div class="card col-lg-6 p-1">
             <div class="member d-flex align-items-start">
                 <div class="pic"><img src="/assets/img/groups/member-stamp.jpg" class="img-fluid" alt=""></div>
                 <div class="member-info">
@@ -52,7 +52,7 @@
             </div>
         </div>
 
-        <div class="col-lg-6 mt-4 mt-lg-0 p-2">
+        <div class="card col-lg-6 p-1">
             <div class="member d-flex align-items-start">
                 <div class="pic"><img src="/assets/img/groups/fundraising-stamp.png" class="img-fluid" alt=""></div>
                 <div class="member-info">
@@ -67,7 +67,7 @@
             </div>
         </div>
 
-        <div class="col-lg-6 mt-4 mt-lg-0 p-2">
+        <div class="card col-lg-6 p-1">
             <div class="member d-flex align-items-start">
                 <div class="pic"><img src="/assets/img/groups/ICPC.png" class="img-fluid" alt="ICPC"></div>
                 <div class="member-info">
@@ -84,7 +84,7 @@
             </div>
         </div>
 
-        <div class="col-lg-6 mt-4 mt-lg-0 p-2">
+        <div class="card col-lg-6 p-1">
             <div class="member d-flex align-items-start">
                 <div class="pic"><img src="/assets/img/groups/CCDC.png" class="img-fluid" alt="CCDC"></div>
                 <div class="member-info">
